# mcp-rs

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  README.md  adr-001.md  deny.toml  justfile
.github/workflows/: ci.yml  release.yml  security.yml
.junie/: guidelines.md
src/: fhirpath_engine.rs  lib.rs  server.rs  tools.rs  transport.rs
src/cache/: mod.rs
src/config/: mod.rs
src/metrics/: health.rs  mod.rs
src/prompts/: mod.rs
src/resources/: examples.rs  mod.rs  schemas.rs
src/security/: auth.rs  mod.rs  validation.rs
src/tools/: fhirpath.rs  fhirpath_evaluate.rs  fhirpath_evaluate_test.rs  fhirpath_parse.rs  mod.rs
src/transport/: http.rs  mod.rs  sse_auth.rs  stdio.rs
tests/: integration_e2e.rs  integration_fhirpath_tools.rs  integration_http.rs  integration_protocol_compliance.rs  integration_sdk.rs  integration_stdio.rs
tests/common/: mod.rs
tests/fixtures/fhir_resources/: bundle.json  observation.json  patient.json
tests/fixtures/fhirpath_expressions/: basic_expressions.json  complex_expressions.json  error_expressions.json
tests/fixtures/mcp_messages/: fhirpath_evaluate.json  initialize.json  tools_list.json
